# easylocal

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  EasyLocalpp.sln  EasyLocalpp.vcproj  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  ToDo2012  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  doxygen.cfg  libtool  test.cc
examples/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  EasyLocal.conf.hh  EasyLocal.conf.vc.hh  EasyLocal.hh  Helpers.hh  Kickers.hh  Makefile  Makefile.am  Makefile.in  Observers.hh  Parameter.lo  Random.lo  Runners.hh  Solvers.hh  Testers.hh  Types.lo  Utils.hh  config.hh  config.hh.in  config.hh.in~  libEasyLocalpp.la  stamp-h1
src/basics/: EasyLocalException.cc  EasyLocalException.hh  EasyLocalObject.cc  EasyLocalObject.hh  EasyLocalSystemObjects.cc  EasyLocalSystemObjects.hh  ObjectNotFoundException.cc  ObjectNotFoundException.hh  ObservableObject.hh  RegistrableObject.cc  RegistrableObject.hh  StoppableObject.cc  StoppableObject.hh
src/extra/helpers/: BimodalRunnerObserver.hh  FrequencyTabuListManager.hh
src/extra/runners/: BimodalHillClimbing.hh  BimodalMoveRunner.hh  BimodalRunnerObserver.hh  BimodalSteepestDescent.hh  BimodalTabuSearch.hh  BimodalTabuSearchWithShiftingPenalty.hh  TabuSearchWithShiftingPenalty.hh  TrimodalHillClimbing.hh  TrimodalMoveRunner.hh  TrimodalSteepestDescent.hh  TrimodalTabuSearch.hh  TrimodalTabuSearchWithShiftingPenalty.hh
src/helpers/: CMakeLists.txt  CostComponent.hh  DeltaCostComponent.hh  FrequencyTabuListManager.hh  MultimodalNeighborhoodExplorer.hh  MultimodalTabuListManager.hh  NeighborhoodExplorer.hh  Observer.hh  OldMultimodalNeighborhoodExplorer.hh  OutputManager.hh  ProhibitionManager.hh  RunnerObserver.hh  ShiftingPenaltyManager.hh  StateManager.hh  TabuListItem.hh  TabuListManager.hh  WeightManager.hh
src/kickers/: BimodalKicker.hh  CMakeLists.txt  Kicker.hh  SimpleKicker.hh
src/lang/: ExpSpec.g
src/observers/: BimodalKickerObserver.hh  BimodalRunnerObserver.hh  CMakeLists.txt  GeneralizedLocalSearchObserver.hh  RunnerObserver.hh  RunnerTimeObserver.hh  ShiftingPenaltyObserver.hh  SimpleKickerObserver.hh
src/runners/: AbstractRunner.hh  AbstractSimulatedAnnealing.hh  BimodalFirstDescent.hh  BimodalHillClimbing.hh  BimodalMoveRunner.hh  BimodalSimulatedAnnealing.hh  BimodalSteepestDescent.hh  BimodalTabuSearch.hh  BimodalTabuSearchWithShiftingPenalty.hh  CMakeLists.txt  FirstDescent.hh  GreatDeluge.hh  HillClimbing.hh  LateAcceptanceHillClimbing.hh  MoveRunner.hh  Runner.hh  SampleTabuSearch.hh  SimulatedAnnealing.hh  SimulatedAnnealingIterationBased.hh  SimulatedAnnealingWithReheating.hh  SimulatedAnnealingWithShiftingPenalty.hh  SteepestDescent.hh  TabuSearch.hh  TabuSearchWithShiftingPenalty.hh  TresholdAcceptance.hh  TrimodalHillClimbing.hh  TrimodalMoveRunner.hh  TrimodalSteepestDescent.hh  TrimodalTabuSearch.hh  TrimodalTabuSearchWithShiftingPenalty.hh
src/solvers/: AbstractLocalSearch.hh  AbstractLocalSearchSolver.hh  AbstractSolver.hh  CMakeLists.txt  ComparativeSolver.hh  GRASP.hh  GeneralizedLocalSearch.hh  GeneralizedLocalSearchSolver.hh  IteratedLocalSearch.hh  LocalSearchSolver.hh  MultiRunnerIteratedLocalSearch.hh  MultiRunnerSolver.hh  OldGeneralizedLocalSearch.hh  SimpleLocalSearch.hh  Solver.hh  TokenRingSearch.hh  TokenRingSolver.hh  VNDSolver.hh  VariableNeighborhoodDescent.hh
src/testers/: CMakeLists.txt  ComponentTester.hh  KickerTester.hh  MoveTester.hh  Tester.hh
src/unit/: CLParserTest.hh  CMakeLists.txt  CostComponentTest.hh  DeltaCostComponentTest.hh  NeighborhoodExplorerTest.hh  OutputManagerTest.hh  StateManagerTest.hh  TestUtils.hh  UnitTestingMain.cc
src/utils/: Argument.cc  Argument.hh  ArgumentGroup.cc  ArgumentGroup.hh  Array.cc  Array.hh  CLParser.cc  CLParser.hh  CMakeLists.txt  Chronometer.cc  Chronometer.hh  ConditionVariable.cc  ConditionVariable.hh  FlagArgument.hh  Interruptible.hh  Mutex.cc  Mutex.hh  Parameter.cc  Parameter.hh  Printable.cc  RWLockVariable.hh  Random.cc  Random.hh  Synchronize.cc  Synchronize.hh  Tuple.hh  Types.cc  Types.hh  ValArgument.hh  parameter.cc  printable.cc  random.cc  types.cc  url.cc
src/utils/clparser/: Argument.cc  Argument.hh  ArgumentGroup.cc  ArgumentGroup.hh  CLParser.cc  CLParser.hh  FlagArgument.hh  ValArgument.hh
src/utils/matrix/: CanonicalBaseVector.hh  Matrix.hh  MatrixAlgorithms.hh  MatrixFunctions.hh  Vector.hh  VectorFunctions.hh
test/nQueens/: CMakeLists.txt  ChessBoard.lo  Makefile  Makefile.am  Makefile.in  PrimaryDiagonalCostComponent.lo  PrimaryDiagonalDeltaCostComponent.lo  QueensOutputManager.lo  QueensStateManager.lo  SecondaryDiagonalCostComponent.lo  SecondaryDiagonalDeltaCostComponent.lo  Swap.lo  SwapNeighborhoodExplorer.lo  libnQueens.la  main.cc  nQueens.vcproj  queens
test/nQueens/.deps/: ChessBoard.Plo  PrimaryDiagonalCostComponent.Plo  PrimaryDiagonalDeltaCostComponent.Plo  QueensOutputManager.Plo  QueensStateManager.Plo  SecondaryDiagonalCostComponent.Plo  SecondaryDiagonalDeltaCostComponent.Plo  Swap.Plo  SwapNeighborhoodExplorer.Plo  main.Po
test/nQueens/.libs/: libnQueens.la  libnQueens.lai
test/nQueens/data/: ChessBoard.cc  ChessBoard.hh  Swap.cc  Swap.hh
test/nQueens/helpers/: PrimaryDiagonalCostComponent.cc  PrimaryDiagonalCostComponent.hh  PrimaryDiagonalDeltaCostComponent.cc  PrimaryDiagonalDeltaCostComponent.hh  QueensFrequencyTabuListManager.hh  QueensNeighborhoodExplorer.cc  QueensNeighborhoodExplorer.hh  QueensOutputManager.cc  QueensOutputManager.hh  QueensStateManager.cc  QueensStateManager.hh  QueensTabuListManager.hh  SecondaryDiagonalCostComponent.cc  SecondaryDiagonalCostComponent.hh  SecondaryDiagonalDeltaCostComponent.cc  SecondaryDiagonalDeltaCostComponent.hh  SwapNeighborhoodExplorer.cc  SwapNeighborhoodExplorer.hh  URDLCostComponent.cc  URDLCostComponent.hh  URDLDeltaCostComponent.cc  URDLDeltaCostComponent.hh
test/nQueens/kickers/: QueensKicker.hh
test/nQueens/unit/: QueensCostComponentsTest.cc  QueensDeltaCostComponentsTest.cc  QueensOutputManagerTest.cc  (+2 more)
test/unit/: Makefile.am  test.cc
(+288 files in other folders)
